# open-lifeworlds-data-product-berlin-lor-daycare-centers

./: .gitignore  README.md  data-product-manifest.yml  data-product.yml  data-transformation.yml  dpds.yml  main.py  odps.yml  pyproject.toml  requirements.txt
data/: geocoding-cache.csv  lor-area-cache.csv
data/berlin-lor-daycare-centers-2023-10/: berlin-lor-daycare-centers-2023-10-details.csv  berlin-lor-daycare-centers-2023-10-details.geojson  berlin-lor-daycare-centers-2023-10-districts.geojson  berlin-lor-daycare-centers-2023-10-forecast-areas.geojson  berlin-lor-daycare-centers-2023-10.csv
data/berlin-lor-daycare-centers-2023-11/: berlin-lor-daycare-centers-2023-11-details.csv  berlin-lor-daycare-centers-2023-11-details.geojson  berlin-lor-daycare-centers-2023-11-districts.geojson  berlin-lor-daycare-centers-2023-11-forecast-areas.geojson  berlin-lor-daycare-centers-2023-11.csv
data/berlin-lor-daycare-centers-2023-12/: berlin-lor-daycare-centers-2023-12-details.csv  berlin-lor-daycare-centers-2023-12-details.geojson  berlin-lor-daycare-centers-2023-12-districts.geojson  berlin-lor-daycare-centers-2023-12-forecast-areas.geojson  berlin-lor-daycare-centers-2023-12.csv
data/berlin-lor-daycare-centers-2024-02/: berlin-lor-daycare-centers-2024-02-details.geojson  berlin-lor-daycare-centers-2024-02-districts.geojson  berlin-lor-daycare-centers-2024-02-forecast-areas.geojson
data/berlin-lor-daycare-centers-2024-04/: berlin-lor-daycare-centers-2024-04-details.geojson  (+2 more)
docs/: data-product-canvas.md  dpds-canvas.md  odps-canvas.md
lib/: data_details_blender.py
(+33 files in other folders)
